apps/web/pages/styles.css
/* ... */
.wrapper .container .one .content .piece:nth-child(2) {
  left: 15%;
  top: 45%;
  width: 150px;
  height: 50px;
  animation-delay: 1s;
  animation-name: pieceLeft;
}
.wrapper .container .one .content .piece:nth-child(3) {
  left: 10%;
  top: 75%;
  height: 20px;
  width: 70px;
  animation-delay: 1.5s;
  animation-name: pieceLeft;
}
.wrapper .container .two .content .piece {
  background: linear-gradient(90deg, #ffedc0 0%, #ff9d87 100%);
}
.wrapper .container .two .content .piece:nth-child(1) {
  left: 0%;
  top: 25%;
  height: 40px;
  width: 120px;
  animation-delay: 2s;
  animation-name: pieceLeft;
}
.wrapper .container .two .content .piece:nth-child(2) {
  right: 15%;
  top: 35%;
  width: 180px;
  height: 50px;
  animation-delay: 2.5s;
  animation-name: pieceRight;
}
.wrapper .container .two .content .piece:nth-child(3) {
  right: 10%;
  top: 80%;
  height: 20px;
  width: 160px;
  animation-delay: 3s;
  animation-name: pieceRight;
}
.wrapper .container .three .content .piece {
  background: #fb8a8a;
}
.wrapper .container .three .content .piece:nth-child(1) {
  left: 25%;
  top: 35%;
  height: 20px;
  width: 80px;
  animation-name: pieceLeft;
  animation-delay: 3.5s;
}
.wrapper .container .three .content .piece:nth-child(2) {
  right: 10%;
  top: 55%;
  width: 140px;
  height: 40px;
  animation-name: pieceRight;
  animation-delay: 4s;
}
.wrapper .container .three .content .piece:nth-child(3) {
  left: 40%;
  top: 68%;
  height: 20px;
  width: 80px;
  animation-name: pieceLeft;
  animation-delay: 4.5s;
}

/* ========================================== Progress Bar ========================================== */
/* Make clicks pass-through */
#nprogress {
  pointer-events: none;
}

#nprogress .bar {
  background: #29d;

  position: fixed;
  z-index: 1031;
  top: 0;
  left: 0;

  width: 100%;
  height: 2px;
}

/* Fancy blur effect */
#nprogress .peg {
  display: block;
  position: absolute;
  right: 0px;
  width: 100px;
  height: 100%;
  box-shadow: 0 0 10px #29d, 0 0 5px #29d;
  opacity: 1;

  -webkit-transform: rotate(3deg) translate(0px, -4px);
  -ms-transform: rotate(3deg) translate(0px, -4px);
  transform: rotate(3deg) translate(0px, -4px);
}

/* Remove these to get rid of the spinner */
#nprogress .spinner {
  display: block;
  position: fixed;
  z-index: 1031;
  bottom: 15px;
  right: 15px;
}

#nprogress .spinner-icon {
  width: 18px;
  height: 18px;
  box-sizing: border-box;

  border: solid 2px transparent;
  border-top-color: #29d;
  border-left-color: #29d;
  border-radius: 50%;

  -webkit-animation: nprogress-spinner 400ms linear infinite;
  animation: nprogress-spinner 400ms linear infinite;
}

.nprogress-custom-parent {
  overflow: hidden;
  position: relative;
}

.nprogress-custom-parent #nprogress .spinner,
.nprogress-custom-parent #nprogress .bar {
  position: absolute;
}

@-webkit-keyframes nprogress-spinner {
  0% {
    -webkit-transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
  }
}
@keyframes nprogress-spinner {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

/* ========================================== Wiggle Wiggle Money ========================================== */
* {
  box-sizing: border-box;
  transform-style: preserve-3d;
}
:root {
  --size: 20vmin;
  --show: 0.7;
  --hide: 0.01;
  --folded: 0;
  --jiggle-delay: 0.01;
  --jiggle-speed: 0.6;
  --jiggle-elevation: 10%;
  --jiggle-rotation: 20deg;
  --fold-delay: 1.7;
  --fold-speed: 0.2;
  --wiggle-speed: 0.75;
  --wiggle-delay: 3;
  --wiggle-elevation: 0%;
  --wiggle-translation: 1%;
  --wiggle-rotation: 5deg;
}
.money_container {
  display: grid;
  place-items: center;
  /* min-height: 100vh; */
  transform-origin: 50% 50%;
  overflow: hidden;
  font-family: sans-serif;
  background: transparent;
}
[data-wigglin='true'] {
  animation: wiggle-wiggle calc(var(--wiggle-speed) * 0.5s)
    calc(var(--wiggle-delay) * 1s) 2 ease-in-out;
}
button.start {
  padding: 8px 16px;
  border-radius: 6px;
  font-weight: bold;
  color: #262626;
  transform-origin: 50% 50%;
  transform: rotate(var(--rotate, 0deg)) scale(var(--scale, 1));
  transition: transform 0.1s ease;
  font-size: 1.25rem;
}
button.start:hover {
  --elevate: -10%;
  --rotate: -5deg;
}
button.start:active {
  --rotate: 0deg;
  --elevate: 0;
  --scale: 0.9;
}
button.restart {
  position: fixed;
  top: 1rem;
  right: 1rem;
  height: 48px;
  aspect-ratio: 1;
  border-radius: 50%;
  transform: scale(var(--scale, 1));
  transition: transform 0.1s ease;
}
button.restart:hover {
  --scale: 1.1;
}
button.restart:active {
  --scale: 0.9;
}
button.restart svg {
  fill: #262626;
}
.money_container[data-wigglin='true'] {
  --show-button: 0;
}
.money_container[data-wigglin='true'] .money {
  animation: show calc(var(--show) * 1s) calc(var(--hide) * 1s) both,
    jiggle-jiggle calc(var(--jiggle-speed) * 1s)
      calc((var(--jiggle-delay) + var(--hide) + var(--show)) * 1s) ease-in-out;
}
.money {
  display: flex;
  height: var(--size);
  aspect-ratio: 6.14/2.61;
  position: relative;
  width: 60px;
  height: 30px;
  background-color: transparent;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) scale(0);
  z-index: -1;
  perspective: 100vmax;
}
[data-wigglin='true'] .money {
  --fold-basis: 180;
  --folded: 1;
}
.money__slide {
  display: flex;
  flex: 1;
}
.money__half {
  flex: 1;
  display: flex;
}
.money__quarter {
  flex: 1;
}
.money__segment {
  background: var(--image);
  background-size: 400% 100%;
  height: 100%;
  width: 100%;
  position: absolute;
  background-position: var(--position, 0%) 0;
}
.money__segment--front {
  --image: url('https://assets.codepen.io/605876/bill--front.jpeg');
}
.money__segment--back {
  --image: url('https://assets.codepen.io/605876/bill--back.jpeg');
  transform: rotateY(180deg) translateZ(1px);
}
.money__segment--one {
  --position: 0;
}
.money__segment--two {
  --position: calc((100 / 3) * 1%);
}
.money__segment--three {
  --position: calc((100 / 3) * 2%);
}
/* ... */

